--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,2 +1,7 @@
 //
 @import '~bootstrap/scss/bootstrap';
+$fa-font-path: "~@fortawesome/fontawesome-free/WebFonts" !default;
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/regular";
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/brands';
