Добавлен контроллер аутентификации и установлен passport

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19782,6 +19782,10 @@ readers do not read off random characters that represent icons */
   margin: 0;
 }
 
+.dropdown-item {
+  text-align: center;
+}
+
 .dropdown-menu.show {
   min-width: 4rem;
 }
