--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,500,700&display=swap&subset=cyrillic,cyrillic-ext);@charset "UTF-8";
 
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
@@ -19773,24 +19773,116 @@ readers do not read off random characters that represent icons */
   font-weight: 400;
 }
 
-.day {
-  margin: 0;
-  font-size: 20px;
+@-webkit-keyframes ldio-8eipe7qgbqw {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 
-.day-number {
-  margin: 0;
+@keyframes ldio-8eipe7qgbqw {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 
-.dropdown-item {
-  text-align: center;
+.ldio-8eipe7qgbqw div {
+  box-sizing: border-box !important;
 }
 
-.dropdown-menu.show {
-  min-width: 4rem;
+.ldio-8eipe7qgbqw > div {
+  position: absolute;
+  width: 67px;
+  height: 67px;
+  top: 16.5px;
+  left: 16.5px;
+  border-radius: 50%;
+  border: 7px solid #000;
+  border-color: #27dae6 transparent #27dae6 transparent;
+  -webkit-animation: ldio-8eipe7qgbqw 1.1627906977s linear infinite;
+          animation: ldio-8eipe7qgbqw 1.1627906977s linear infinite;
 }
 
-.fixed-width {
-  width: 60px !important;
+.ldio-8eipe7qgbqw > div:nth-child(2) {
+  border-color: transparent;
+}
+
+.ldio-8eipe7qgbqw > div:nth-child(2) div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.ldio-8eipe7qgbqw > div:nth-child(2) div:before,
+.ldio-8eipe7qgbqw > div:nth-child(2) div:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  top: -7px;
+  left: 23px;
+  background: #27dae6;
+  border-radius: 50%;
+  box-shadow: 0 60px 0 0 #27dae6;
+}
+
+.ldio-8eipe7qgbqw > div:nth-child(2) div:after {
+  left: -7px;
+  top: 23px;
+  box-shadow: 60px 0 0 0 #27dae6;
+}
+
+.loadingio-spinner-dual-ring-4yp7ndn2wh {
+  width: 31px;
+  height: 31px;
+  display: inline-block;
+  overflow: hidden;
+  background: none;
+}
+
+.ldio-8eipe7qgbqw {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  -webkit-transform: translateZ(0) scale(0.31);
+          transform: translateZ(0) scale(0.31);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+  /* see note above */
+}
+
+.ldio-8eipe7qgbqw div {
+  box-sizing: content-box;
+}
+
+.button__inner {
+  position: relative;
+}
+
+.btn-form-size {
+  width: 150px;
+  height: 50px;
+}
+
+.button__spiner {
+  position: absolute;
+  top: -5px;
+  left: 10px;
 }
 
