--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,5 +14,7 @@
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/v4-shims";
 
+@import 'material-icons/iconfont/material-icons.scss';
+
 // Own styles
 @import "global";
